# GPU_Budget_Negotiation_Arena

./: .dockerignore  .gitignore  BLOG.md  Dockerfile  README.md  SPEC.md  openenv.yaml  openenv_hackathon_idea_pack.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
artifacts/: baseline_eval.json  before_after_training.md  demo_transcript.md  grpo_training_curve.json  holdout_eval.json  judged_transcript.md  sft_training_curve.json  trained_llm_eval.json  trained_llm_summary.json  training_curve.json  training_eval.json  training_report.md
data/: sft_messages.jsonl  sft_traces.jsonl
gpu_budget_arena/: __init__.py  baselines.py  env.py  judge.py  llm_policy.py  models.py
notebooks/: eval.ipynb
plots/: reward_progress.json
scripts/: build_sft_dataset.py  check_submission.py  evaluate_baselines.py  evaluate_holdout.py  evaluate_trained_llm.py  extract_sft_curve.py  generate_demo_transcript.py  generate_judged_transcript.py  generate_sft_data.py  instant_demo.py  live_space_smoke.py  plot_eval.py  plot_trained_vs_baselines.py  publish_to_hub.py  smoke.py
server/: app.py
tests/: test_api.py  test_baselines.py  test_edge_cases.py  test_env_core.py  test_invariants.py  test_judge_hybrid.py  test_llm_policy.py  test_training_artifacts.py  test_validation_and_coalitions.py
training/: GPU_Budget_Negotiation_Arena_Colab.ipynb  run_grpo_against_env.py  run_unsloth_sft.py  train_grpo_stub.py
