[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-budget-arena"
version = "0.1.0"
description = "OpenEnv-compatible GPU budget negotiation arena for multi-agent LLM training."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
train = [
  "accelerate>=0.34",
  "datasets>=2.20",
  "huggingface-hub>=0.24",
  "peft>=0.12",
  "transformers>=4.44",
  "trl>=0.11",
]

[tool.setuptools.packages.find]
include = ["gpu_budget_arena", "gpu_budget_arena.*", "server", "server.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
